--- a/index.html
+++ b/index.html
@@ -59,7 +59,75 @@
             <button class="button" type="submit">Fill out the form -></button>
           </div>
         </div>
+        <div class="my-carousel">
+          <div id="carousel" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="image/img1.png" class="d-block w-50 image" alt="Image1">
+              </div>
+              <div class="carousel-item">
+                 <img src="image/img2.png" class="d-block w-50 image" alt="Image2">
+              </div>
+              <div class="carousel-item">
+               <img src="image/img3.png" class="d-block w-50 image" alt="Image3">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span></button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span></button>
+          </div>
+        </div>
+        <div class="my-card row">
+          <div class="card col-12 col-sm-6 col-md-4" style="width: 23rem;">
+            <img src="image/img4.png" class="card-img-top" alt="Image4">
+            <div class="card-body">
+              <p class="before">TIPS AND HELP</p>
+              <h3 class="card-title">How to Choose Locks for an Interior Door?</h3>
+              <p class="card-text">The choice of a lock for an interior door is important. If you choose a low-quality mechanism, it can fail at the most inopportune moment — when the door is closed. In this...</p>
+              <a href="#" class="btn btn-primary"><span class="about-botton">Read more</span></a>
+            </div>
+          </div>  
+          <div class="card col-12 col-sm-6 col-md-4" style="width: 23rem;">
+            <img src="image/img5.png" class="card-img-top" alt="Image5">
+            <div class="card-body">
+              <p class="before">DOOR TYPES</p>
+              <h3 class="card-title">How Are Modern Garage Doors Made?</h3>
+              <p class="card-text">In modern construction, garages are often connected to the house. Therefore, it is inconvenient to use swing doors. Garage doors that open upwards are more common...</p>
+              <a href="#" class="btn btn-primary"><span class="about-botton">Read more</span></a>
+            </div>
+          </div>
+          <div class="card col-12 col-sm-6 col-md-4" style="width: 23rem;">
+            <img src="image/img6.png" class="card-img-top" alt="Image6">
+            <div class="card-body">
+               <p class="before">TIPS AND HELP</p>
+               <h3 class="card-title">How to Choose Interior Doors for Your Home</h3>
+               <p class="card-text">Choosing interior doors is an important step. They can optimally fit into the interior, or vice versa, spoil everything. Therefore, it is better to make a choice even at the design...</p>
+               <a href="#" class="btn btn-primary"><span class="about-botton">Read more</span></a>
+            </div>
+          </div>
+        </div>
     </main>
+    <footer></footer>
+    <div class="modal fade" id="info-card" tabindex="-1" aria-labelledby="info-cardLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="info-cardLabel">Card info</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body"> 
+            <img src="image/img1.png" class="d-block w-50 image" alt="Image1">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous">
